# Octogine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/models/: character.glb  character.gltf  cube.glb  guy.glb  run.glb  sphere.glb  untitled.glb  walkarch.glb
assets/shaders/: background.fs  cubemap.fs  debugDepth.fs  depth.fs  main.fs  main.vs  prefilter.fs  skeletal.fs  skeletal.vs  skybox.fs
editor/: CMakeLists.txt  assetBrowser.h  baseUI.h  hierarchy.h  inspector.h  log.h  main.cpp  viewport.h
example/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ExampleProject.sln  ExampleProject.vcxproj  ExampleProject.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  inspector.h  main.cpp  oldmain.oldcpp
lib/glad/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Glad.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  glad.vcxproj  glad.vcxproj.filters
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Octogine.h
src/animations/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.cpp  Bone.h  SkeletalMesh.cpp  SkeletalMesh.h  SkeletalModel.cpp  SkeletalModel.h  Skeleton.h
src/assetmanager/: Asset.h  AssetManager.cpp  AssetManager.h
src/audio/: Audio.cpp  Audio.h  AudioListener.h  Sound.cpp  Sound.h
src/core/: App.cpp  App.h  Core.cpp  Core.h  Events.h  Input.cpp  Input.h  Window.cpp  Window.h
src/graphics/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  FrameBuffer.cpp  FrameBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Model.h.old  RenderBuffer.cpp  RenderBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h
src/lighting/: DirectionalLight.h  Enivroment.cpp  Enivroment.h  Light.h  LightingManager.cpp  LightingManager.h  Material.h  PointLight.h  Shadow.cpp  Shadow.h  SkyBox.cpp  SkyBox.h  SpotLight.h
src/models/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/physics/: Collider.cpp  Collider.h  JoltUtils.h  Layers.h  Physics.cpp  Physics.h  RayCast.cpp  RayCast.h  RigidBody.cpp  RigidBody.h  Shape.cpp  Shape.h
src/scenes/: Entity.cpp  Entity.h  Object.cpp  Object.h  Scene.cpp  Scene.h
src/scenes/3D/: Collider3D.h  MeshObject.cpp  MeshObject.h  Model3D.h  Node3D.h  Object3D.cpp  Object3D.h  Pointlight3D.h  Rigidbody3D.h  Spotlight3D.h  Sun3D.h
